[package]
name = "cp-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cp-core = "0.2.4"

git2 = "0.18.1"

log = { version = "0.4", features = [] }

zip = "0.6"

uuid = { version = "1.6", features = ["v4"] }