[package]
name = "cp-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cp-core = "0.2.7"

git2 = "0.18"

log = { version = "0.4", features = [] }

zip = "0.6"

uuid = { version = "1.6", features = ["v4"] }

tokio = { version = "1.35", features = ["full"] }

axum = "0.7"

shaku = "0.6"
shaku_axum = "0.4"

async-channel = "2.1"

[dev-dependencies]

chrono = { version = "0.4", features = ["clock"] }

mockall = "0.12.0"